# GEMpp

./: LICENSE.en  LICENSE.fr  NEWS  README  README.md  THIRD-PARTY-NOTICES  index.html
doc/: Doxyfile  _binary_p_n_g_8h_source.html  _bipartite_edges_8h_source.html  _bipartite_g_e_d_8h_source.html  _configuration_8h_source.html  _console_application_8h_source.html  _constants_8h_source.html  _constraint_8h_source.html  _cplex_plugin_8h_source.html  _edge_8h_source.html  _error_tol_sub_iso_8h_source.html  _exact_sub_iso_8h_source.html  _exception_8h_source.html  _expression_8h_source.html  _extraction_configuration_8h_source.html  _f_d_layout_8h_source.html  _file_utils_8h_source.html  _formulation_8h_source.html  _g_e_d_8h_source.html  _g_u_i_application_8h_source.html  _generic_extractor_8h_source.html  _getting_started_8h_source.html  _graph_8h_source.html  _graph_element_8h_source.html  _graph_list_8h_source.html  _gurobi_plugin_8h_source.html  _h_z_extractor_8h_source.html  _i_cleanable_8h_source.html  _i_drawable_8h_source.html  _i_loadable_8h_source.html  _i_printable_8h_source.html  _i_saveable_8h_source.html  _i_xml_serializable_8h_source.html  _i_xml_serializable_8old_8h_source.html  _identified_8h_source.html  _indexed_8h_source.html  _layout_edge_8h_source.html  _layout_graph_8h_source.html  _layout_graph_element_8h_source.html  _layout_vertex_8h_source.html  (+430 more)
doc/dev/: Doxyfile
doc/dev/pages/: MainPage.h
doc/pages/: GettingStarted.h  License.h  MainPage.h  ThirdPartyNotices.h
doc/user/: Doxyfile
doc/user/pages/: Installation.h  License.h  MainPage.h  ThirdPartyNotices.h
packaging/linux/end-user/: build.sh  description-pak
packaging/linux/server/: build.sh  install.sh
packaging/win64/: gem++.iss  gem++glpk.iss
redist/linux/end-user/: README  build.sh
redist/linux/server/: README  build.sh  install.sh
redist/win64/: win64.iss
ressources/: references.bib  weights.xsd
ressources/images/src/: GEM++back.pspimage  GEM++logo.pspimage  GEM++splash.pspimage
src/: GEM++.pro  Portability.h  cli.pri  cli.rc  common.pri  gui.pri  lib.pri  plugin.pri
src/Apps/: Apps.pro
src/Apps/CostsLearning/: Particle.h  ParticleSwarm.h
src/Apps/Distance/: main.cpp
src/Apps/GUI/: GUI.qrc  MainWindow.cpp  MainWindow.h  QGraphWidget.cpp  QGraphWidget.h  QSubgraphDialog.cpp  QSubgraphDialog.h  moc_MainWindow.cpp  moc_QGraphWidget.cpp  moc_QSubgraphDialog.cpp  qrc_GUI.cpp
src/Apps/Isomorphism/: Isomorphism.pro
src/Apps/MultiDistances/: main.cpp
src/Apps/MultiIsomorphisms/: MultiIsomorphisms.pro  main.cpp
src/GEM++/: GEM++.pro  moc_GUIApplication.cpp  moc_LayoutGraph.cpp  moc_Matcher.cpp  moc_MatchingApplication.cpp  moc_QConfigurationDialog.cpp
src/GEM++/Application/: ConsoleApplication.cpp  ConsoleApplication.h  GUIApplication.cpp  GUIApplication.h  MatchingApplication.cpp  MatchingApplication.h
src/GEM++/Core/: Constants.cpp  Constants.h  FileStream.cpp  FileStream.h  ICleanable.cpp  ICleanable.h  IPrintable.h  ISaveable.h  IXmlSerializable.h  Identified.cpp  Identified.h  Indexed.cpp  Indexed.h  Matrix.h  Printer.cpp  Printer.h  Random.cpp  Random.h
src/GEM++/Extraction/: BinaryPNG.cpp  BinaryPNG.h  ExtractionConfiguration.h  Extractor.cpp  Extractor.h  GenericExtractor.cpp  GenericExtractor.h  HZExtractor.cpp  HZExtractor.h  PairExtractor.cpp  PairExtractor.h  RAGExtractor.cpp  RAGExtractor.h  SingleExtractor.h  TextKNNExtractor.h  Vectorizer.cpp  Vectorizer.h  Zernike.cpp  Zernike.h
src/GEM++/Formulation/: BipartiteEdges.cpp  BipartiteEdges.h  BipartiteGED.cpp  BipartiteGED.h  ErrorTolSubIso.cpp  ErrorTolSubIso.h  ExactSubIso.cpp  ExactSubIso.h  Formulation.cpp  Formulation.h  GED.cpp  GED.h  LinearGED.cpp  LinearGED.h  QuadraticGED.cpp  QuadraticGED.h  Solution.cpp  Solution.h  SolutionList.cpp  SolutionList.h  SubIso.cpp  SubIso.h  SubTolSubIso.cpp  SubTolSubIso.h
src/GEM++/IntegerProgramming/: Constraint.cpp  Constraint.h  Expression.h  LinearConstraint.cpp  LinearConstraint.h  LinearExpression.h  LinearProgram.cpp  LinearProgram.h  Program.cpp  Program.h  QuadConstraint.cpp  QuadConstraint.h  QuadExpression.cpp  QuadExpression.h  QuadProgram.cpp  QuadProgram.h  Variable.cpp  Variable.h
src/GEM++/Layout/: FDLayout.cpp  FDLayout.h  IDrawable.h  LayoutEdge.cpp  LayoutEdge.h  LayoutGraph.h  LayoutGraphElement.cpp  LayoutGraphElement.h  LayoutVertex.h
src/GEM++/Model/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphElement.cpp  GraphElement.h  GraphList.cpp  GraphList.h  Metadata.cpp  Metadata.h  Problem.cpp  Problem.h  Vertex.cpp  Vertex.h  Weight.cpp  Weight.h  WeightHash.cpp  WeightHash.h  Weights.cpp  Weights.h
src/GEM++/Solver/: Configuration.cpp  Configuration.h  Matcher.cpp  Matcher.h  PluginLoader.cpp  PluginLoader.h  Solver.cpp  Solver.h  SolverFactory.h
src/Libraries/: Libraries.pro
src/Libraries/QGar/: NEWS  QGar.pro
src/Plugins/: Plugins.pro
src/Plugins/Cplex/: Cplex.pro  CplexPlugin.cpp  (+1 more)
src/apps/: apps.pro
src/dependencies/QGar/qgarlib/: AbstractFile.h  AbstractGenPointChain.h  AbstractGenPointChain.tcc  AbstractGraphicsFile.h  AbstractQgarError.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CannyGradientImage.cpp  CannyGradientImage.h  CleanedBinaryImage.cpp  CleanedBinaryImage.h  CloseBinaryImage.h  CloseImage.h  DericheGradientImage.h  DesShapeContext.cpp  DilatedBinaryImage.cpp  DilatedBinaryImage.h  DilatedImage.cpp  DilatedImage.h  Dist34BlackCCImage.cpp  Dist34Image.cpp  Dist8cBlackCCImage.cpp  Dist8cBlackCCImage.h  DxfFile.h  ErodedBinaryImage.cpp  File.h  FreemanCode.h  GenConvolImage.h  GenConvolImage.tcc  GenEdge.h  GenKMeans.h  GenKMeans.tcc  GenMask1d.h  GenMask1d.tcc  GenMask2d.h  GenPointChain.h  GenUGraph.h  GenUGraph.tcc  GeodesicRecBinaryImage.cpp  (+70 more)
src/dependencies/QGar/qgarlib/qtimpl/: QtAttributesAdaptor.cpp  QtAttributesAdaptor.h  QtLocatorAdaptor.cpp  QtLocatorAdaptor.h  QtQgarEntityResolverAdaptor.cpp  QtQgarErrorHandlerAdaptor.cpp  QtStringConverter.h
src/dependencies/QGar/qgarlib/sax/: DefaultHandler.h  EntityResolver.h  Locator.h  XMLReader.h  XMLReaderFactory.h
src/plugins/: plugins.pro
(+191 files in other folders)
